# coswasm-guard

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/actions/cosmwasm-guard/: action.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: analyze.rs  init.rs  list.rs  mod.rs
crates/cli/src/output/: json.rs  mod.rs  sarif.rs  text.rs
crates/cli/tests/: integration_test.rs  real_world_validation.rs
crates/cli/tests/fixtures/: safe_contract.rs  vulnerable_contract.rs
crates/cli/tests/fixtures/real-world/: cw1_whitelist_contract.rs  cw20_base_contract.rs  cw20_ics20_contract.rs  cw3_multisig_contract.rs  cw4_group_contract.rs  cw4_stake_contract.rs
crates/core/: Cargo.toml
crates/core/src/: cache.rs  config.rs  lib.rs
crates/core/src/ast/: contract_info.rs  crate_analyzer.rs  mod.rs  parser.rs  utils.rs  visitor.rs
crates/core/src/detector/: context.rs  mod.rs  registry.rs  traits.rs
crates/core/src/finding/: display.rs  mod.rs  types.rs
crates/core/src/ir/: builder.rs  cfg.rs  instruction.rs  mod.rs  types.rs
crates/core/src/report/: types.rs
crates/detectors/: Cargo.toml
crates/detectors/src/: arithmetic_overflow.rs  incorrect_permission_hierarchy.rs  lib.rs  missing_access_control.rs  missing_addr_validate.rs  missing_error_propagation.rs  missing_funds_validation.rs  missing_migration_version.rs  nondeterministic_iteration.rs  storage_key_collision.rs  submessage_reply.rs  unbounded_iteration.rs  uninitialized_state_access.rs  unsafe_unwrap.rs
docs/: code-standards.md  development-roadmap.md  project-changelog.md  project-overview-pdr.md  system-architecture.md
