[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["SafeStack AI"]

[workspace.dependencies]
# AST parsing
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Output
colored = "2"

# File system
walkdir = "2"

# Error handling
thiserror = "2"
anyhow = "1"
