[package]
name = "cosmwasm-guard"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
walkdir.workspace = true
